<resources>
    <string name="app_name">My Recipes</string>

    <!---   Login activity  -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_btn_text">LOGIN</string>
    <string name="create_account_btn_text">No account yet? Create one</string>
    <string name="main_logo_content_description">Main app logo, by Artyom</string>

    <!--    Navigation bar  -->
    <string name="navigation_bar_recipes">Recipes</string>
    <string name="navigation_bar_search">Search</string>
    <string name="navigation_bar_fridge">Fridge</string>
    <string name="navigation_bar_profile">Profile</string>
    <string name="each_category_element">each_category_element</string>

    <!---   Search XML   -->
    <string name="searchable_recipes">Recipes</string>

    <!--    Search fragment     -->
    <string name="start_search">Start search</string>
    <string name="search_query_hint">Find…</string>

    <!--    Refrigerator fragment     -->
    <string name="add_product">Add</string>

    <!--    Add Product activity     -->
    <string name="add_product_hint">Enter some ingredient</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="cooking_time">Cooking time:</string>
    <string name="rating">Rating:</string>
    <string name="description">Description:</string>
    <string name="instrument">Instrument:</string>
    <string name="ingredient">Ingredient:</string>
    <string name="direction">Steps:</string>
    <string name="wait_rating">...</string>
    <string name="oops">Oops...</string>
    <string name="sign_in">Sign - in...</string>
    <string name="logout">Logout</string>
    <string name="your_name">Your name:</string>
    <string name="your_surname">Your surname:</string>
    <string name="name_and_surname">Name and surname:</string>
    <string name="login_and_password">Login and password:</string>
    <string name="think_up_login">Think up login:</string>
    <string name="and_think_up_password">And think up password:</string>
    <string name="repeat_password">Repeat password:</string>
    <string name="register">Register</string>
    <string name="continue_without_registration">Continue without registration</string>
    <string name="product">Product</string>

</resources>
