<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/BBackground">

    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_margin="20dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_and_surname"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/name"
                    android:layout_marginTop="@dimen/standart_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/your_name"/>

                <EditText
                    android:id="@+id/surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/your_surname"/>


                <TextView
                    android:layout_marginTop="40dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_and_password"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/login"
                    android:layout_marginTop="@dimen/standart_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/think_up_login"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/and_think_up_password"/>

                <EditText
                    android:id="@+id/password_repeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/repeat_password"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/register_btn"
                    android:layout_marginTop="40dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:background="@color/loginBtnColor"/>

            </LinearLayout>

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/BWhiteTransparent"
        android:visibility="invisible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <!-- Logo -->
            <ImageView
                android:id="@+id/logo_image_view2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/logo_height"
                android:layout_marginHorizontal="@dimen/logo_horizontal_margin"
                android:scaleType="centerCrop"
                android:src="@drawable/logo"
                android:contentDescription="@string/main_logo_content_description" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/signin_hint"
                android:layout_below="@+id/logo_image_view2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/horizontal_layout_margin_20"
                android:text="@string/sign_in"
                style="@style/LoginTitleTextViewBlueBerryStyle"/>

        </RelativeLayout>

    </FrameLayout>

</RelativeLayout>